@@ -13,7 +13,6 @@ import org.springframework.boot.test.context.SpringBootTest;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -34,7 +33,7 @@ class UpdateMealHandlerTest extends CommonMealHandlerTest {
 
         createRecipes(recipeDigestList);
 
-        final var recipeIds = recipeDigests.stream().map(RecipeDigest::getId).collect(Collectors.toList());
+        final var recipeIds = recipeDigests.stream().map(RecipeDigest::getId).toList();
         final var request = CreateMealRequest.builder()
                 .withUuid(userId)
                 .withRecipeIds(recipeIds).build();
@@ -120,7 +119,7 @@ class UpdateMealHandlerTest extends CommonMealHandlerTest {
 
         createRecipes(recipeDigestList);
 
-        final var recipeIds = recipeDigests.stream().map(RecipeDigest::getId).collect(Collectors.toList());
+        final var recipeIds = recipeDigests.stream().map(RecipeDigest::getId).toList();
         final var request = CreateMealRequest.builder()
                 .withUuid(userId)
                 .withRecipeIds(recipeIds).build();
